defined models and db connection

--- a/server/Makefile
+++ b/server/Makefile
@@ -3,4 +3,4 @@
 MAIN_FILE := src/main.ts
 
 run:
-	deno run --unstable --allow-read --allow-net ${MAIN_FILE}
+	deno run --unstable --allow-read --allow-write --allow-plugin --allow-net --allow-env ${MAIN_FILE}
